Fixed filters not showing completely if no offers

--- a/SPA/src/app/candidate-home/candidate-home.component.scss
+++ b/SPA/src/app/candidate-home/candidate-home.component.scss
@@ -2,6 +2,7 @@ mat-sidenav-container {
   background-color: white;
   margin-top: -16px;
   padding-top: 16px;
+  min-height: 90vh;
 }
 
 mat-sidenav {
@@ -15,6 +16,11 @@ mat-sidenav {
 
 mat-sidenav-content {
   padding: 0 8px;
+  height: 100%;
+
+  button {
+    height: 40px;
+  }
 }
 
 mat-sidenav h3 {
